# assistive-commons-watch

./: .eleventy.js  .gitignore  CLAUDE.md  README.md  _improvements_report_2.html  assistive-commons-watch.md  package-lock.json  package.json  pyproject.toml  schema.json
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: submit_project.yml
.github/workflows/: deploy.yml  validate.yml
_data/projects/: 3d-printed-educational-devices-kit.yaml  3d-printed-low-tech-at-kit.yaml  a11ywatch.yaml  able-player.yaml  acat.yaml  accessibility-insights-web.yaml  assistive-switches-kit.yaml  asterics-eye-tracker.yaml  asterics-grid.yaml  axe-core.yaml  brailletouch.yaml  cboard.yaml  coding-crops.yaml  colorcode.yaml  coughdrop.yaml  daisy-pipeline.yaml  dasher.yaml  emacspeak.yaml  espeak-ng.yaml  eviacam.yaml  eyemine.yaml  fabi.yaml  flipmouse.yaml  forest-joystick-mouse-hub.yaml  freespeech.yaml  gazeplay.yaml  gueopic.yaml  hearingaid-prototype.yaml  igaze.yaml  instructables-adaptive-button.yaml  instructables-diy-quad-stick.yaml  instructables-emg-prosthetic-hand.yaml  instructables-galileo-hand.yaml  instructables-headphone-amp-hearing.yaml  instructables-makey-makey-at.yaml  instructables-project-halo.yaml  instructables-quad-controller.yaml  (+66 more)
_fetchers/: __init__.py  base.py  github.py  hackaday.py  models.py  printables.py  scoring.py
scripts/: add_project.py  build_json.py  export_schema.py  fetch_all.py  validate_yaml.py
site/: about.njk  browse.njk  index.njk  methodology.njk  projects.njk
tests/: test_fetcher.py  test_models.py  test_scoring.py
(+4 files in other folders)
